--- a/.docker/docker-compose.yaml
+++ b/.docker/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.3"
 services:
   hello-world:
-    image: demo/hello-world:1
+    image: demo/hello-world:%VERSION%
     ports:
         - "1080:1080"
